# unify-hackathon-demo

./: .gitignore  README.md  pyproject.toml  resume.txt  start_chrome_debug.sh
computers/: __init__.py  computer.py  config.py  utils.py
computers/default/: __init__.py  local_playwright.py
computers/shared/: base_playwright.py
specialized_agents/: __init__.py  computer_agent.py  constants.py  planning_agent.py  research_agent.py
unify_berkeley_hackathon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
